# sle-prjmgr-tools

./: .gitignore  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  setup.cfg  sle-prjmgr-tools.changes  sle-prjmgr-tools.spec
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml  lint.yml  release_pypi.yml  test.yml
.obs/: workflows.yml
config/: release-management-tools.json
docker/: build.dockerfile  install-check.dockerfile
docs/: conf.py  index.rst  user-guide.rst
docs/apidoc/: modules.rst  sle_prjmgr_tools.config.rst  sle_prjmgr_tools.rst  sle_prjmgr_tools.utils.rst
sle_common/: .gitignore  diff-modules.sh  package-updates-from-xcdchk.sh
sle_prjmgr_tools/: __init__.py  cli.py  diff_modules.py  ibs_to_jira.py  incident_repos.py  jira_epics.py  list_accepted_pkgs.py  package_updates_from_xcdchk.py  packagelist_report.py  release_to.py  release_to_publish.py  release_to_test.py  search_binary.py  sle_build.py  update_build_status_page.py  version.py
sle_prjmgr_tools/config/: __init__.py  sle-prjmgr-tools.json
sle_prjmgr_tools/utils/: __init__.py  confluence.py  jira.py  osc.py
tests/: conftest.py  ibs_to_jira_test.py  sle_build_test.py
tests/data/: .gitignore  oscrc.template
tests/scripts/: project_testsetup.py
tests/utils/: jira_test.py  osc_test.py
