[metadata]
name = sle-prjmgr-tools
version = attr: sle_prjmgr_tools.__version__
description = SLE Project management tools to release SLE based products
long_description = file: README.md
long_description_content_type = text/markdown
keywords = SUSE
license = EUPL-1.2
classifiers =
    Programming Language :: Python :: 3
license_files = LICENSE
author = SUSE SLE Project Managers
project_urls =
    Source = https://github.com/openSUSE/sle-prjmgr-tools
    Tracker = https://github.com/openSUSE/sle-prjmgr-tools/issues

[options]
zip_safe = False
packages = find:
install_requires =
    requests
    PyYAML
    osc
    jira
    lxml
    importlib_resources

[options.package_data]
sle_prjmgr_tools.config =
    *.json

[options.entry_points]
console_scripts =
    sle-prjmgr-tools = sle_prjmgr_tools.cli:main

[options.extras_require]
lint =
    black
    pylint
    mypy
    types-PyYAML
    types-requests
#    types-lxml
test =
    pytest
