[metadata]
name = sle-prjmgr-tools
version = attr: sle_prjmgr_tools.__version__
description = SLE Project management tools to release SLE based products
long_description = file: README.md
keywords = SUSE
license = EUPL-1.2
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
    PyYAML
    osc
    jira
    lxml

[options.entry_points]
console_scripts =
    sle-prjmgr-tools = sle_prjmgr_tools.cli:main

[options.extras_require]
lint =
    black
    pylint
    mypy
    types-PyYAML
    types-requests
#    types-lxml
test =
    pytest
