[metadata]
name = sle-prjmgr-tools
version = attr: sle_prjmgr_tools.__version__
description = SLE Project management tools to release SLE based products
long_description = file: README.md
long_description_content_type = text/markdown
keywords = SUSE
license = EUPL-1.2
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license_files = LICENSE
author = SUSE SLE Project Managers
project_urls =
    Source = https://github.com/openSUSE/sle-prjmgr-tools
    Tracker = https://github.com/openSUSE/sle-prjmgr-tools/issues

[options]
zip_safe = False
packages = find:
install_requires =
    argcomplete
    requests
    PyYAML
    osc
    jira
    lxml
    keyring
    importlib_resources
python_requires = >=3.6

[options.package_data]
sle_prjmgr_tools.config =
    *.json

[options.entry_points]
console_scripts =
    sle-prjmgr-tools = sle_prjmgr_tools.cli:main

[options.extras_require]
lint =
    black
    pylint
    mypy
    types-PyYAML
    types-requests
#    types-lxml
docs =
    sphinx>=4.3.0
    sphinx-rtd-theme>=0.5.1
    doc8
    rstcheck
test =
    pytest
